--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 header {
-    background-image: linear-gradient(to top, #EEEEE6, transparent), url(/img/imagem_tela_inicial/reximginicial.jpg);
+    background-image: linear-gradient(to top, #EEEEE6, transparent), url(../img/imagem_tela_inicial/reximginicial.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 40em;
